--- a/cluster1.yaml
+++ b/cluster1.yaml
@@ -1,3 +1,8 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: argo-test
+---
 apiVersion: hive.openshift.io/v1
 kind: ClusterDeployment
 metadata:
